# Django-App

./: .gitignore
prod/: Dockerfile  pyproject.toml
prod/mysite/mysite/: settings.py
